# 6502-computer-emulator

./: Cargo.toml  LICENSE  README.md
extractCharset/: extract.py
src/: cpu.rs  interface_adapter.rs  main.rs  mapper.rs  opcodes.rs  ppu.rs
